--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,4 +27,9 @@
     图标2:
     <!-- 一行变多行只改了.icons .icon的width -->
     <my-icons2 list="{{iconlist2}}"></my-icons2>
+    输入框：
+    <my-line-field 
+    bindvalueInput="valueInput"
+    >
+    </my-line-field>
 </view>
