--- a/components/gridCard/gridCard.scss
+++ b/components/gridCard/gridCard.scss
@@ -1,10 +1,11 @@
 /* components/gridCard/gridCard.wxss */
+@charset "utf-8";
 .SourceContainer{
-  width:700rpx;
-  height:402rpx;
+  width:702rpx;
+  height:414rpx;
   margin:0 auto;
   display: grid;
-  /* 先设置出9个格子3*3 */
+  /* 先设置出9个格子3*3*/
   grid-template-columns:262rpx 235rpx 165rpx;
   grid-template-rows:144rpx 122rpx 109rpx;
   /* 设置行和列间隙 */
@@ -19,8 +20,8 @@
 $girdarr:all ppt paper homework refer other;
 @each $value in $girdarr{
   .#{$value}{
-  grid-area:$value;
-}
+    grid-area:$value;
+  }
 }
 
 .SourceContainer .smtex{
@@ -34,4 +35,3 @@ $girdarr:all ppt paper homework refer other;
   width: 100%;
   height:100%;
 }
-
