--- a/components/gridCard/gridCard.wxss
+++ b/components/gridCard/gridCard.wxss
@@ -1,59 +1,49 @@
 @charset "UTF-8";
 /* components/gridCard/gridCard.wxss */
 .SourceContainer {
-  width: 700rpx;
-  height: 402rpx;
+  width: 702rpx;
+  height: 414rpx;
   margin: 0 auto;
   display: grid;
-  /* 先设置出9个格子3*3 */
+  /* 先设置出9个格子3*3*/
   grid-template-columns: 262rpx 235rpx 165rpx;
   grid-template-rows: 144rpx 122rpx 109rpx;
   /* 设置行和列间隙 */
   grid-gap: 20rpx 20rpx;
   /* 设置每一行的格子填入什么区域名，重复的比如ppt就一行占2个格子 */
-  grid-template-areas: "all ppt ppt " "all homework refer" "paper homework orther";
-}
+  grid-template-areas: "all ppt ppt " "all homework refer" "paper homework orther"; }
 
 .SourceContainer view {
-  position: relative;
-}
+  position: relative; }
 
 /* 挨个声明区域名和对应的块 */
 .all {
-  grid-area: all;
-}
+  grid-area: all; }
 
 .ppt {
-  grid-area: ppt;
-}
+  grid-area: ppt; }
 
 .paper {
-  grid-area: paper;
-}
+  grid-area: paper; }
 
 .homework {
-  grid-area: homework;
-}
+  grid-area: homework; }
 
 .refer {
-  grid-area: refer;
-}
+  grid-area: refer; }
 
 .other {
-  grid-area: other;
-}
+  grid-area: other; }
 
 .SourceContainer .smtex {
   position: absolute;
   z-index: 2;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
-}
+  transform: translate(-50%, -50%); }
 
 .SourceContainer view image {
   width: 100%;
-  height: 100%;
-}
+  height: 100%; }
 
 /*# sourceMappingURL=gridCard.wxss.map */
