--- a/components/gridCard/gridCard.scss
+++ b/components/gridCard/gridCard.scss
@@ -15,6 +15,7 @@
 }
 .SourceContainer view{
   position:relative;
+  font-size:24rpx;
 }
 /* 挨个声明区域名和对应的块 */
 $girdarr:all ppt paper homework refer other;
